[package]
name = "moonlift"
version = "0.1.0-alpha.0"
authors = ["Christoph Hommelsheim <main@chommel.en>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HellButcher/moonlift.git"
edition = "2021"
rust-version = "1.65"

[dependencies]
cranelift = "0.98.1"
cranelift-jit = "0.98.1"
cranelift-module = "0.98.1"
cranelift-native = "0.98.1"
thiserror = "1.0.46"
